--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Skills</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <header></header>
+
+  <section> </section>
+
+  <figure>
+    <img src="images/background.png" alt="profile pic">
+  </figure>
+
 </body>
 </html>
