--- a/index.html
+++ b/index.html
@@ -6,23 +6,45 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Skills</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+  <main id="home">
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+    </nav>
+    <figure>
+      <img src="images/background.png" alt="profile pic">
+    </figure>
+    <header>
+      <h1> Hi, I'm Jenny.</h1>
+      <h4>Aspiring Software Engineer</h4>
+      <p>Currently a student at Launch School, an online </p>
+      <p>mastery-based school for software engineering.</p>
+    </header>
+  </main>
 
-  <header></header>
+  <section id="about"> 
+    <h2>About Me</h2>
+    <p>
+    </p>
+  </section>
 
-  <section> </section>
+  <section id="skills"> 
+    <h2>Skills</h2>
+  </section>
 
-  <figure>
-    <img src="images/background.png" alt="profile pic">
-  </figure>
+  <section id="projects"> 
+    <h2>Projects</h2>
+    <p>In progress</p>
+  </section>
+
+  <section id="contact"> 
+    <h2>Contact me</h2>
+  </section>
 
 </body>
 </html>
