adjust header and figure flow

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main id="home">
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <figure>
-      <img src="images/background.png" alt="profile pic">
-    </figure>
+  <nav id="home">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
     <header>
       <h1> Hi, I'm Jenny.</h1>
       <h5>Aspiring Software Engineer</h5>
       <p>Currently a student at Launch School, an online </p>
       <p>mastery-based school for software engineering.</p>
-    </header>
+    </header><figure>
+      <img src="images/background.png" alt="profile pic">
+    </figure>
   </main>
 
   <section id="about"> 
