--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>Currently a student at Launch School, an online </p>
       <p>mastery-based school for software engineering.</p>
     </header><figure>
-      <img src="images/background.png" alt="profile pic">
+      <img src="images/profile_pic.png" alt="profile pic">
     </figure>
   </main>
 
