--- a/index.html
+++ b/index.html
@@ -1,50 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Jenny Wan</title>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <nav id="home">
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
 
-  <main>
-    <header>
-      <h1> Hi, I'm Jenny.</h1>
-      <h5>Aspiring Software Engineer</h5>
-      <p>Currently a student at Launch School, an online </p>
-      <p>mastery-based school for software engineering.</p>
-    </header><figure>
-      <img src="images/profile_pic.png" alt="profile pic">
-    </figure>
-  </main>
+  <head>
+    <title>Jenny Wan</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="ajax.js"></script>
+  </head>
 
-  <section id="about"> 
-    <h2>About Me</h2>
-    <p>
-    </p>
-  </section>
+  <body>
+    <nav id="home">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about" id="about-link">About</a></li>
+        <li><a href="#skills" id="skills-link">Skills</a></li>
+        <li><a href="#projects" id="projects-link">Projects</a></li>
+        <li><a href="#contact" id="contact-link">Contact</a></li>
+      </ul>
+    </nav>
 
-  <section id="skills"> 
-    <h2>Skills</h2>
-  </section>
-
-  <section id="projects"> 
-    <h2>Projects</h2>
-    <p>In progress</p>
-  </section>
-
-  <section id="contact"> 
-    <h2>Contact me</h2>
-  </section>
-
-</body>
+    <main>
+      <header>
+        <h1> Hi, I'm Jenny.</h1>
+        <h5>Aspiring Software Engineer</h5>
+        <p>Currently a student at Launch School, an online </p>
+        <p>mastery-based school for software engineering.</p>
+      </header><figure>
+        <img src="images/profile_pic.png" alt="profile pic">
+      </figure>
+    </main>
+    
+  </body>
 </html>
