--- a/about.html
+++ b/about.html
@@ -18,16 +18,12 @@
     </ul>
   </nav>
 
-  <main id="main-content">
-    <header>
-      <h1> Hi, I'm Jenny.</h1>
-      <h5>Aspiring Software Engineer</h5>
-      <p>Currently a student at Launch School, an online </p>
-      <p>mastery-based school for software engineering.</p>
-    </header><figure>
-      <img src="public/images/profile_pic.png" alt="profile pic">
-    </figure>
-  </main>
+  <div class="centerIt">
+      <main id="about">
+        <p>Launch School is a self paced program.</p>
+        <p>I am currently enrolled in JS 185, studying back-end deveopment.</p>
+      </main>
+  </div>
 </body>
 
 </html>
