--- a/projects.html
+++ b/projects.html
@@ -18,15 +18,8 @@
     </ul>
   </nav>
 
-  <main id="main-content">
-    <header>
-      <h1> Hi, I'm Jenny.</h1>
-      <h5>Aspiring Software Engineer</h5>
-      <p>Currently a student at Launch School, an online </p>
-      <p>mastery-based school for software engineering.</p>
-    </header><figure>
-      <img src="public/images/profile_pic.png" alt="profile pic">
-    </figure>
+  <main id="projects">
+    <p>In Progress</p>
   </main>
 </body>
 
