--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,7 @@
   </nav>
 
   <main id="skills">
-    <p>JavaScript, HTML, CSS, NodeJS, Express.JS, Pug</p>
+    <p>JavaScript, HTML, CSS, Node.JS, Express.JS, Pug</p>
   </main>
 </body>
 
