save smalle dits

--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,8 @@
   </nav>
 
   <main id="skills">
-    <p>JavaScript, HTML, CSS, Node.JS, Express.JS, Pug</p>
+    <p>JavaScript, HTML, CSS, Pug</p>
+    <p>Node.JS, Express.JS</p>
   </main>
 </body>
 
