--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Jenny Wan</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+
 </head>
 
 <body>
@@ -20,7 +22,7 @@
 
   <main id="main-content">
     <header>
-      <h1> Hi, I'm Jenny.</h1>
+      <h1 class="text-desciption type-me"></h1>
       <h5>Aspiring Software Engineer</h5>
       <p>Currently a student at Launch School, an online </p>
       <p>mastery-based school for software engineering.</p>
