--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
   <title>Jenny Wan</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
