Edit skills section

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       <main id="about">
         <h1 class="about-animation">About Me</h1>
         <p class="about-text-animation">Launch School is a self paced program.</p>
-        <p class="about-text-animation">I am currently enrolled in JS 175, studying back-end development.</p>
+        <p class="about-text-animation">I am currently enrolled in JS 175 & JS 180, studying back-end development.</p>
       </main>
 
   </div>
