--- a/skills.html
+++ b/skills.html
@@ -21,8 +21,9 @@
 
   <main id="skills">
     <h1>Skills</h1>
-    <p>JavaScript, HTML, CSS, Pug</p>
-    <p>Node.JS, Express.JS</p>
+     <p><strong>Languages &amp; Frameworks</strong>: JavaScript, Node.JS, Express.jS, HTML/CSS</p>
+     <p><strong>Technologies</strong>: PostgreSQL, SQL, AWS(ECS), Linux, HTTP, OOP, Git/Github</p>
+    <p><strong>In progress</strong>: TypeScript, Golang, Heroku, Docker, NoSQL, and more</p>
   </main>
 </body>
 
