save edits to chart

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <p>Launch School JavaScript Tracks:</p>
     <pre class="mermaid">
           flowchart TB
-          A(JS 170 Networking) --> B(JS 175 Networked Applications) 
+          A(JS 170 Networking Foundations) --> B(JS 175 Networked Applications) 
           B --> C(JS 180 Database Foundations)
           B --> D(JS 202 HTML/CSS)
     </pre>
