--- a/index.html
+++ b/index.html
@@ -38,9 +38,27 @@
   </section>
 
   <section id="projects">
-    <h1>Projects</h1>
-    <p>This is the current assignment I'm working on, a website for a JS Conference.</p>
-    <p class="projects-img"><a href="JSConf BR 2014/index.html"><img src="images/jsconference.png"></a></p>
+      <h1>Projects</h1>
+      <p>These are the current assignments I'm working on. </p>
+      <p>
+        <a href="JSConf BR 2014/index.html">
+          <div class="container"></div>
+          <img src="public/images/jsconference.png">
+          <div class="hover-text">
+            <p>This is a website for the JSConf BR 2014 event.</p>
+          </div>
+        </a>
+      </p>
+      <p>
+        <a href="todo_list/index.html">
+          <img src="public/images/todos_list.png">
+          <div class="hover-text">
+            <p>Hello</p>
+            <a href="todolist/views/instructions.html">Assignment Instructions</a>
+          </div>
+        </a>
+        <a href="todo_list/views/instructions.html">Assignment Instructions</a>
+      </p>
   </section>
 
   <section id="skills">
