--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
       <div class="container">
         <a href="JSConf BR 2014/index.html"><img src="public/images/jsconference.png"></a>
         <div class="hover-text">
-          <p>This is a website for the JSConf BR 2014 event.</p>
+          <p>This is a <a href="JSConf BR 2014/index.html">website</a> for the JSConf BR 2014 event.</p>
         </div>
       </div>
       <div class="container">
         <a href="todo_list/index.html"><img src="public/images/todos_list.png"></a>
         <div class="hover-text">
           <a href="todo_list/views/instructions.html">Assignment Instructions</a>
+          <a href="todo_list/index.html">Link</a>
         </div>
       </div>
   </section>
