--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <div class="container">
         <a href="todo_list/index.html"><img src="public/images/todos_list.png"></a>
         <div class="hover-text">
-          <a href="todo_list/views/instructions.html">Assignment Instructions</a>
-          <a href="todo_list/index.html">Link</a>
+          <div><a href="todo_list/views/instructions.html">Assignment Instructions</a></div>
+          <div><a href="todo_list/index.html">Link</a></div>
         </div>
       </div>
   </section>
