--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="skills">
     <h1>Skills</h1>
     <p><strong>Languages &amp; Frameworks</strong>: JavaScript, Node.JS, Express.jS, HTML/CSS</p>
-    <p><strong>Technologies</strong>: PostgreSQL, SQL, AWS(ECS), Linux, HTTP, OOP, Git/Github</p>
+    <p><strong>Technologies</strong>: PostgreSQL, SQL, AWS Cloud9, Linux, HTTP, OOP, Git/Github</p>
     <p><strong>In progress</strong>: TypeScript, Golang, Heroku, Docker, NoSQL, and more</p>
   </section>
 
